--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "botirk",
   "license": "ISC",
   "dependencies": {
+    "browser-sync": "^2.27.5",
+    "gulp": "^4.0.2",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sass": "^5.0.0",
     "htmlhint": "^0.15.1",
+    "sass": "^1.38.2",
     "stylelint": "^13.13.1",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^22.0.0",
