--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-scss-combine": "^1.0.0",
     "htmlhint": "^0.15.1",
